# tracksim

./: CMakeLists.txt  README.md  main.cpp
con/: con.cpp  con.h
lib/: tools.cpp  tools.h
